sapp/sapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sapp
  template:
    metadata:
      labels:
        app: sapp
    spec:
      volumes:
      - name: local-pv
        persistentVolumeClaim:
          claimName: local-pv-claim
      - name: config-file
        configMap:
          name: config-file
      containers:
      - image: lxjsword/sapp:v2
        command: ["python"]
        args: ["-m", "http.server"]
        name: sapp
        ports:
        - containerPort: 8000
          protocol: TCP
        volumeMounts:
        - mountPath: "/home/sapp/pv"
          name: local-pv
        - name: config-file
          mountPath: /home/sapp/config-file
          subPath: config-file
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 8000
