sapp/sapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapp-svc
spec:
  ports:
  - port: 8080
    targetPort: 8000
  selector:
    app: sapp
